--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.2.0",
     "gsap": "^3.2.6",
     "react": "^16.13.1",
+    "react-div-100vh": "^0.3.8",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
